--- a/index.html
+++ b/index.html
@@ -248,6 +248,11 @@
           </p>
         </div>
       </div>
+    </div>
+</section>
+
+<section class="section">
+    <div class="container is-max-widescreen">
       <!-- Motion Alignment. -->
       <h2 class="title is-3">Inference Thread: Motion Alignment</h2>
       <video id="teaser" class="lazy" poster="./static/images/alignment_new7.png"  autoplay muted loop height="100%">
@@ -282,6 +287,11 @@
           </p>
         </div>
       </div>
+    </div>
+</section>
+
+<section class="section">
+    <div class="container is-max-widescreen">
       <!-- General. -->
       <h3 class="title is-4">General Evaluation</h3>
       
@@ -294,21 +304,31 @@
           </p>
         </div>
       </div>
+    </div>
+</section>
+<section class="section">
+    <div class="container is-max-widescreen">
       <!-- Outdoor dataset. -->
       <h3 class="title is-4">Outdoor Datasets: SemanticKITTI and nuScenes</h3>
       
       <img src="./static/images/sk_p.png" alt="logo" style="width: 900px; display: block; margin: 0 auto;" >
 
       <img src="./static/images/nuscenes1.png" alt="logo" style="width: 1000px; display: block; margin: 0 auto;" >
-
+    </div>
+</section>
+<section class="section">
+    <div class="container is-max-widescreen">
       <!-- Indoor dataset. -->
        <h3 class="title is-4">Indoor Dataset: HOI4D</h3>
        <img src="./static/images/hoi4d.png" alt="logo" style="width: 650px; display: block; margin: 0 auto;" >
-
+    </div>
+</section>
+<section class="section">
+    <div class="container is-max-widescreen">
        <!-- Ablation study. -->
        <h3 class="title is-4">Ablation Study: effects of components</h3>
        <img src="./static/images/ablation.png" alt="logo" style="width: 900px; display: block; margin: 0 auto;" >
-
+    </div>
 </section>
 
 
