--- a/index.html
+++ b/index.html
@@ -231,6 +231,22 @@
     </div>
 </section>
 
+<!-- Streaming 4D Panoptic Segmentation -->
+<section class="section">
+    <div class="container is-max-widescreen">
+      <!-- Pipeline. -->
+      <h2 class="title is-3">Streaming 4D Panoptic Segmentation</h2>
+  
+      <div class="columns">
+        <div class="column">
+          <p>
+            We propose a new task of streaming 4D panoptic segmentation. Similar to the traditional streaming perception paradigm, streaming 4D panoptic segmentation conducts the panoptic segmentation in an online manner. <b></b>The key challenge is ensuring that each incoming frame is processed and predicted within an ignorant small time budget, even if the processing of the current frame is not complete.</b>
+          </p>
+        </div>
+      </div>
+    </div>
+</section>
+
 <!-- Methods -->
 <section class="section">
     <div class="container is-max-widescreen">
