--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+
 <!DOCTYPE html>
 <html>
+  
 <head>
   <meta charset="utf-8">
   <meta name="description"
@@ -187,11 +189,10 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video id="teaser" class="lazy" poster="./static/images/teaser.png"  autoplay muted loop height="100%">
+      <video id="teaser" class="lazy" poster="./static/images/teaser.png"  autoplay muted loop height="100%" style="display: block; margin: 0 auto; max-width: 100%; height: auto; background-position: center;">
         <source src="static/videos/teaser.mp4"
                 type="video/mp4">
       </video>
-      <!-- <img src="./static/images/mainpicture.png" alt="logo""> -->
       <h2 class="subtitle has-text-centered">
         <span style="color: rgb(100,149,237); font-weight:bold">4DSeg</span><span style="color: rgb(144,238,144); font-weight:bold">Streamer</span> is a real-time dual-thread framework for fine-grained <span style="color: rgb(100,149,237); font-weight:bold">4D panoptic segmentation</span> in highly dynamic environments. Designed for <span style="color: rgb(144,238,144); font-weight:bold"">online streaming inputs considering computational latency</span>, it achieves a balanced trade-off between accuracy and efficiency. The framework is general and can empower existing 3D and 4D segmentation methods with real-time perception capabilities.  
       </h2>
