--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
       <!-- General. -->
       <h3 class="title is-4">General Evaluation</h3>
       
-      <img src="./static/images/general.png" alt="logo" style="width: 500px; display: block; margin: 0 auto;" >
+      <img src="./static/images/table/t1.png" alt="logo" style="width: 950px; display: block; margin: 0 auto;" >
       
       <div class="columns">
         <div class="column">
@@ -341,25 +341,37 @@
       </div>
 
 
-      <img src="./static/images/sk_p.png" alt="logo" style="width: 900px; display: block; margin: 0 auto;" >
+      <img src="./static/images/table/t2.png" alt="logo" style="width: 950px; display: block; margin: 0 auto;" >
+      <img src="./static/images/table/t3.png" alt="logo" style="width: 950px; display: block; margin: 0 auto;" >
 
       <!-- add a video here -->
 
-      <img src="./static/images/nuscenes1.png" alt="logo" style="width: 1000px; display: block; margin: 0 auto;" >
+      <div style="display: flex; justify-content: center; gap: 20px;">
+        <img src="./static/images/table/t4.png" alt="logo" style="width: 550px;">
+        <img src="./static/images/table/t5.png" alt="logo" style="width: 550px;">
+      </div>
     </div>
 </section>
 <section class="section">
     <div class="container is-max-widescreen">
       <!-- Indoor dataset. -->
        <h3 class="title is-4">Indoor Dataset: HOI4D</h3>
-       <img src="./static/images/hoi4d.png" alt="logo" style="width: 650px; display: block; margin: 0 auto;" >
+       <img src="./static/images/table/t6.png" alt="logo" style="width: 450px; display: block; margin: 0 auto;" >
     </div>
 </section>
 <section class="section">
     <div class="container is-max-widescreen">
        <!-- Ablation study. -->
        <h3 class="title is-4">Ablation Study: effects of components</h3>
-       <img src="./static/images/ablation.png" alt="logo" style="width: 900px; display: block; margin: 0 auto;" >
+       <img src="./static/images/table/t7.png" alt="logo" style="width: 950px; display: block; margin: 0 auto;" >
+    </div>
+</section>
+
+<section class="section">
+    <div class="container is-max-widescreen">
+       <!-- Ablation study. -->
+       <h3 class="title is-4">Performance of Different GPUs</h3>
+       <img src="./static/images/table/t8.png" alt="logo" style="width: 500px; display: block; margin: 0 auto;" >
     </div>
 </section>
 
