--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
           <div class="column has-text-centered">
             <div class="publication-links">
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href=""
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -146,25 +146,25 @@
                   </span>
                   <span>Code</span>
                   </a>
-              </span>
-              <!-- <span class="link-block">
-                <a href=""
+              </span> -->
+              <span class="link-block">
+                <a href="https://www.youtube.com/watch?v=WE0DvkrRLAA&t=3s"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
                   </span>
                   <span>Video</span>
                 </a>
-              </span> -->
-              <!-- <span class="link-block">
-                <a href=""
+              </span>
+              <span class="link-block">
+                <a href="https://iccv.thecvf.com/media/PosterPDFs/ICCV%202025/1593.png?t=1759959013.9852426"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fab fa-slideshare"></i>
                   </span>
-                  <span>Slides</span>
+                  <span>Poster</span>
                 </a>
-              </span> -->
+              </span>
               <!-- <span class="link-block">
                 <a href=""
                    class="external-link button is-normal is-rounded is-dark">
@@ -374,6 +374,17 @@
     </div>
 </section>
 
+<div>
+  <div class="container is-max-widescreen content">
+    <h2 class="title">BibTeX</h2>
+    <pre><code>@article{4dsegstreamer,
+      title={4DSegStreamer: Streaming 4D Panoptic Segmentation via Dual Threads},
+      author={Ling, Liu and Jun, Tian and Li, Yi},
+      <!-- journal={arXiv preprint arXiv:2507.02747}, -->
+      year={2025}
+    }</code></pre>
+    </div>
+  </div>
 
 
 <footer class="footer">
