--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 
           <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- <span class="link-block">
-                <a href=""
+              <span class="link-block">
+                <a href="https://arxiv.org/pdf/2510.17664"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -130,7 +130,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/abs/2510.17664"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -146,7 +146,7 @@
                   </span>
                   <span>Code</span>
                   </a>
-              </span> -->
+              </span>
               <span class="link-block">
                 <a href="https://www.youtube.com/watch?v=WE0DvkrRLAA&t=3s"
                    class="external-link button is-normal is-rounded is-dark">
